tests/error/escaped_string_literals_should_increment_the_line_count.c
// fail "escaped_string_literals_should_increment_the_line_count.c(11"

char *arst = " arst \
        arst \
        arst \
        arst \
        arst \
        arst \
        ";
        
#error arst 
